# thareja

./: CMakeLists.txt  meson.build
include/: chap06.h
src/: chap06.c  chap06.h
tests/: test_chap06.cpp
